# GUI4Womo

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Docker/: arm32v7.Dockerfile_pi3  buildpi3.sh  startpi3.sh
Dokumente/: Infos.txt
cmake/: FindGLIB.cmake  FindOSMScout.cmake  FindPANGO.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  FindSQLite3.cmake  Findv4l2.cmake  Toolchain-RaspberryPi.cmake  cppcheckhelper.cmake
src/: CMakeLists.txt  logger.conf
src/PiGuiWomoLin/: AppEvents.h  CMakeLists.txt  WomoLINGuiApp.cpp  WomoLINGuiApp.h  main.cpp
src/common/: CMakeLists.txt
src/common/utils/: CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.h  LogNetDispatcher.cpp  LogNetDispatcher.hpp  UdpLogClient.cpp  UdpLogClient.hpp
